Issue45 improvement on header, tabs animations & subscription ribbon mis alignment in Mobile view (#46)
* Improving the header placement & newsletter overflow

* Improving the header hamburger animation in mobile

* fixing the lint issues

* improving Tab animations

* improving Tab animations

* improving Tab animations

* Fixing the lint issues

---------

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -160,13 +160,17 @@ header nav .expanddiv {
 }
 
 header nav[aria-expanded="false"] .expanddiv {
-  transition: height 0.5s ease-in-out;
-  transition-behavior: allow-discrete;
-  display: none; 
+  height: 0;
+  overflow: hidden;
 }
 
 header nav[aria-expanded="true"] .expanddiv {
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  height: 1500px;
+  overflow:hidden;
+  transition: height 1s ease-in;
 }
 
 
@@ -430,18 +434,11 @@ header nav .nav-tools {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  /* padding: 1rem; */
 }
 
 .scrolled:not(.mobile) {
   background: var(--dark-orange); /* Orange background when scrolled */
 }
-
-/* #nav > div.section.nav-tools > div > p.button-container > a {
-  background-color: transparent;
-  color: var(--white);
-} */
 
 header .nav-tools button.translate-button {
   background-color: transparent;
@@ -634,8 +631,6 @@ header .tabs-panel {
 
 header .nav-in-menu-wrap .tabs-panel {
   margin-top: -1px;
-
-  /* border: 1px solid var(--dark-color); */
   overflow: auto;
   padding: 0 4.5% 108px;
 }
@@ -703,6 +698,13 @@ header .nav-bottom {
   header nav[aria-expanded="true"] {
     min-height: 0;
     overflow: visible;
+  }
+
+  header nav[aria-expanded="true"] .expanddiv {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    overflow:visible;
   }
 
   header .nav-search-icon {
