--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -66,8 +66,6 @@
     text-decoration: underline;
 }
 
-
-
 .tabs .tabs-list button[aria-selected="false"]:hover,
 .tabs .tabs-list button[aria-selected="false"]:focus {
     background-color: var(--dark-color);
@@ -76,11 +74,15 @@
 .tabs .tabs-panel[aria-hidden="false"] {
     margin-top: -1px;
     padding: 0 16px;
-    overflow: auto;
+    overflow: scroll;
+    height: var(--tab-height);
+    transition: height .5s ease-in;
 }
 
 .tabs .tabs-panel[aria-hidden="true"] {
-    display: none;
+    height: 0;
+    overflow: hidden;
+    transition: height .5s ease-in;
 }
 
 .tabs a {
@@ -117,7 +119,7 @@
     position: relative;
     margin-bottom: 20px;
     margin-top: 0;
-    padding-left: 10vw;
+    padding-left: 6vw;
 }
 
 .tabs-tab[aria-selected="true"] > p {
@@ -203,6 +205,10 @@
     .tabs .tabs-panel > div p {
         display: block;
     }  
+
+    .tabs .tabs-panel[aria-hidden="true"] {
+        display: none;
+    }
 
     .tabs .tabs-list button::after {
         content: '';
